--- a/src/Dora.GraphQL/src/GraphQL.Core/GraphQL.Core.csproj
+++ b/src/Dora.GraphQL/src/GraphQL.Core/GraphQL.Core.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.2" />
     <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
