--- a/src/Dora.GraphQL/src/GraphQL.Core/GraphQL.Core.csproj
+++ b/src/Dora.GraphQL/src/GraphQL.Core/GraphQL.Core.csproj
@@ -7,6 +7,18 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+    <DocumentationFile>D:\projects\dora\src\Dora.GraphQL\src\GraphQL.Core\Dora.GraphQL.Core.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>D:\projects\dora\src\Dora.GraphQL\src\GraphQL.Core\Dora.GraphQL.Core.xml</DocumentationFile>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+  </PropertyGroup>
+
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
 
   <ItemGroup>
