--- a/src/Dora.GraphQL/src/GraphQL.Server/GraphQL.Server.csproj
+++ b/src/Dora.GraphQL/src/GraphQL.Server/GraphQL.Server.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\GraphQL.Core\GraphQL.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
