--- a/src/Dora.GraphQL/src/GraphQL.Core/GraphQL.Core.csproj
+++ b/src/Dora.GraphQL/src/GraphQL.Core/GraphQL.Core.csproj
@@ -25,6 +25,8 @@
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.2" />
