--- a/src/Dora.DynamicProxy/Dora.DynamicProxy/Dora.DynamicProxy.csproj
+++ b/src/Dora.DynamicProxy/Dora.DynamicProxy/Dora.DynamicProxy.csproj
@@ -44,6 +44,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
     <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
+    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.2" />
   </ItemGroup>
 
   <ItemGroup>
