--- a/src/Dora.DynamicProxy/Dora.DynamicProxy/Dora.DynamicProxy.csproj
+++ b/src/Dora.DynamicProxy/Dora.DynamicProxy/Dora.DynamicProxy.csproj
@@ -9,13 +9,14 @@
       <Company>Artech</Company>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <Product>Dora</Product>
-      <Version>2.2.0</Version>
+      <Version>2.2.1</Version>
       <PackageTags>Dependency Injection, DI, AOP, Interception, Proxy</PackageTags>
       <PackageIconUrl>http://www.doranet.org/images/logo.png</PackageIconUrl>
       <PackageProjectUrl>http://www.doranet.org</PackageProjectUrl>
       <RepositoryUrl>https://github.com/jiangjinnan/Dora</RepositoryUrl>
       <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
       <PackageReleaseNotes>Performance enhancement, more ways to register interceptors, bug fixing.</PackageReleaseNotes>
+      <PackageId>Dora.DynamicProxy</PackageId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
