--- a/src/Dora.Interception/Dora.Interception/Dora.Interception.csproj
+++ b/src/Dora.Interception/Dora.Interception/Dora.Interception.csproj
@@ -10,13 +10,14 @@
     <Company>Artech</Company>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Product>Dora</Product>
-    <Version>2.2.0</Version>
+    <Version>2.2.1</Version>
     <PackageTags>Dependency Injection, DI, AOP, Interception, Proxy</PackageTags>
     <PackageIconUrl>http://www.doranet.org/images/logo.png</PackageIconUrl>
     <PackageProjectUrl>http://www.doranet.org</PackageProjectUrl>
     <RepositoryUrl>https://github.com/jiangjinnan/Dora</RepositoryUrl>
     <PackageReleaseNotes>Performance enhancement, more ways to register interceptors, bug fixing.</PackageReleaseNotes>
     <LangVersion>7.3</LangVersion>
+    <PackageId>Dora.Interception</PackageId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
